# n3xt_wasm

./: .gitignore  README.md  goals.md  index.html  links.txt  out.json  parser.js  parser.wasm  polygon-viewer.html  readme.md  slicer.html  test.html  test.js  todo.md
assets/css/: slicer.css  style.css
assets/js/: header.js  main.js  slicer.js  slicer.mjs  slicer.wasm
assets/stl/: prusa_bed.stl
clipper-test/: clipper.cpp  compile.txt  main  main.cpp  out.gcode  out.json
clipper-test/models/: hard.stl
cpp/: Slicer.cpp  compile.txt  main  main.cpp  out.gcode
slicer/: CMakeLists.txt  Main.cpp  ParseSTL.cpp  ParseSTL.hpp  Slicer.cpp  Slicer.hpp  Triangle.hpp  Vec3.hpp
slicer-old/: Main.cpp  ParseSTL.cpp  Slicer.cpp  ToJSON.cpp  ToJSON.hpp
wasm/: CMakeLists.txt  Slicer.cpp  compile.txt  index.html  parser.cpp  parser.html  slicer.mjs  slicer.wasm  tohle_funguje.txt
